--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="username">UserName</string>
     <string name="password">Password</string>
     <string name="id">Id</string>
+    <string name="required">required</string>
     <string name="title">Title</string>
     <string name="photo">Photo</string>
     <string name="details">Details</string>
